Added the users collectiona and validation
