# routes/index.js
@@ -3,9 +3,10 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    res.send('Welcome to the API!');
+    res.send('Welcome to The Personal Expense Tracker API!');
 });
 
 router.use('/expenses', require('./expenses'));
+router.use('/users', require('./users'));
 
 module.exports = router;
